# corruptvideofileinspector

./: .gitignore  .pre-commit-config.yaml  <Mock name='mock.database.path' id='139861481836896'>  <Mock name='mock.database.path' id='140214563131744'>  =6.0  CHANGELOG.md  CLI_README.md  CODEOWNERS  COMPLETION_REPORT.md  CONFIG.md  CONFIG_SECURITY.md  COPILOT_OPTIMIZATION_SUMMARY.md  COVERAGE_ANALYSIS.md  CorruptVideoInspector.py  CorruptVideoInspector_refactored.py  DUAL_ASSIGNMENT_VERIFICATION.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  Makefile  NX_PYTHON_IMPLEMENTATION_PLAN.md  NX_PYTHON_IMPLEMENTATION_SUMMARY.md  NX_QUICK_START.md  README.md  REFACTOR_SUMMARY.md  Readme.md  SECURITY.md  TRAKT_INTEGRATION.md  TRAKT_LIBRARY_DOCS.md  WATCHLIST_USAGE.md  __init__.py  __main__.py  ai_agent_pyproject_instructions.md  api_server.py  cli_commands.py  cli_handler.py  config.example.yaml  config.probe.yaml  config.py  (+31 more)
.devcontainer/: devcontainer.json
.github/: AGENTS.md  CODEOWNERS  agents.md  copilot-instructions.md  copilot-setup-steps.yml  copilot.yml  dependabot.yml  instructions.md  issue-labeler.yml  labels.yml  settings.yaml  settings.yml
.github/ISSUE_TEMPLATE/: 00-quick-capture.yml  build.yml  chore.yml  ci.yml  component.yml  config.yml  docs.yml  feat.yml  fix.yml  perf.yml  refactor.yml  revert.yml  security.md  security.yml  style.yml  test.yml
.github/agents/: README.md  architecture-designer.agent.md  code-review-agent.md  code-reviewer.agent.md  documentation-agent.md  feature-creator.agent.md  feature-development-agent.md  github-actions-troubleshooter.agent.md  implementation-planner.agent.md  issue-creation-agent.md  issue-creation.agent.md  issue-creation.combined.md  lint-error.agent.md  performance-optimization-agent.md  pr-conflict-resolution-agent.md  refactoring-agent.md  refactoring.agent.md  security-reviewer.agent.md  test.agent.md  testing-agent.md
.github/instructions/: agent-files.instructions.md  agent-tool-philosophy.md  configuration.md  copilot-instructions.md  docker.md  git.md  github-actions.md  github-workflows.instructions.md  instructions.md  label-system.instructions.md  project-specific.md  pytest-tests.instructions.md  python-source.instructions.md  python-tests.instructions.md  python.md  testing.md
.github/workflows/: README.md  VARIABLES.md  WORKFLOW_INSTRUCTIONS.md  auto-assign-issue.yml  auto-create-branch.yml  ci.yml  copilot-setup-steps.yml  issue-form-labeler.yml  issue-triage-agent.yml  issue-triage.yml  labeler.yml  nx-ci.yml  pr-conflict-resolution.yml  pr-title-check.yml  release-please.yml  release.yml  workflow-validation.yml
apps/api/: README.md
apps/cli/: README.md
apps/web/: README.md  index.html  package.json  project.json  tsconfig.json  vite.config.ts
docker/: .env.example  Dockerfile  Dockerfile.api  Dockerfile.dev  Dockerfile.frontend  Dockerfile.web  docker-compose.dev.yml  docker-compose.web.yml  docker-compose.yml  entrypoint.sh  nginx.conf
docs/: AGENTS.md  ALPHA_RELEASES.md  API.md  API_IMPLEMENTATION_NOTES.md  API_QUICKSTART.md  CHANGELOG.md  CLI.md  CONFIG.md  CONTENT_DETECTION.md  CONTRIBUTING.md  CORE.md  DATABASE.md  DATABASE_API_PHASE2.md  DATABASE_MIGRATION.md  DOCKER.md  DOCKER_TRAKT.md  FFMPEG.md  INTERFACE_REFACTORING.md  NX_MONOREPO.md  NX_TROUBLESHOOTING.md  PHASE1_MVP.md  PROBE.md  PROBE_IMPLEMENTATION_SUMMARY.md  PR_TITLE_CHECK.md  README.md  REPORTER.md  REPOSITORY_CONFIGURATION.md  TRAKT_INTEGRATION.md  UTILS.md  VERSIONING.md  WEB_UI.md  agents.md  tests.md  trakt.md
examples/: README.md  api_example.py  database_api_demo.py  database_api_queries.graphql  report_demo.py
frontend/src/: App.tsx
instructions/: configuration.md  copilot-instructions.md  docker.md  git.md  github-actions.md  instructions.md  project-specific.md  python.md  testing.md  workflows.md
issues/: fix-workflow-logic.md  workflow_failure.md
libs/core/: README.md
libs/ui-components/: README.md
man/: actionlint.1
secrets/: README.md
src/: __init__.py  __main__.py  main.py  output.py  utils.py  version.py
src/api/: __init__.py  __main__.py  app.py  main.py  models.py  project.json  rest.py  security.py
src/cli/: __init__.py  cli_commands.py  cli_handlers.py  commands.py  credential_utils.py  handlers.py  logging.py  main.py  project.json  scan_adapter.py  utils.py
src/config/: __init__.py  config.py  config_loader.py  config_settings.py  merge.py  secrets.py  video_formats.py
src/core/: __init__.py  core_models.py  core_scanner.py  credential_validator.py  database.py  detector.py  formatting.py  inspector.py  probe_cache.py  prober.py  project.json  reporter.py  scan_processing.py  scan_service.py  scanner.py  utils.py  video_files.py  watchlist.py
src/database/: __init__.py  models.py  service.py
src/ffmpeg/: corruption_detector.py  ffmpeg_client.py  ffprobe_client.py
src/integrations/: __init__.py
src/interfaces/: __init__.py  base.py  factory.py  web_example.py
src/storage/: __init__.py  wal.py
src/utils/: __init__.py  logging.py  output.py  progress.py  signals.py
test-larger/: README.md  corruption_scan_results.json
tests/: README.md  __init__.py  run_tests.py  test_cli_handler.py  test_cli_integration.py  test_cli_trakt_sync.py  test_config.py  test_config_security.py  test_docker_configuration.py  test_end_to_end_integration.py  test_full_scan_mode.py  test_handlers_integration.py  test_output_path.py  test_scan_handler_output.py  test_scan_output_directory.py  test_scan_output_model.py  test_signal_and_progress.py  test_signal_and_progress_clean.py  test_signal_and_progress_clean_fixed.py  test_signal_and_progress_new.py  test_trakt_library.py  test_trakt_watchlist.py  test_utils.py  test_utils_fixed.py  test_utils_integration.py  test_version.py  test_video_inspector.py  test_video_inspector_integration.py  test_workflow_logic.py  test_workflow_validation.py
tests/integration/: test_api_database_integration.py  test_api_endpoints.py  test_cli_integration.py  test_cli_trakt_oauth.py  test_cli_trakt_sync.py  (+8 more)
(+129 files in other folders)
